feat: Support to all new minecraft versions and new event system and cache for online and event cooldown variables for a better performance